--- a/uat/Mobile/online/styles/index.css
+++ b/uat/Mobile/online/styles/index.css
@@ -1092,3 +1092,54 @@ iframe#main{
   bottom: 0;
   right: 0;
 }
+
+/* 登录下拉菜单 */
+.dropdown-box {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-btn {
+    height: .55rem;
+    width: 1.35rem;
+    line-height: .55rem;
+    font-size: .26rem;
+    color: #fff;
+    border: 1px solid #52c018;
+    border-radius: .04rem;
+    justify-content: center;
+    text-align: center;
+}
+.dropdown-content {
+    position: absolute;
+    top: .56rem;
+    left: -.2rem;
+    display: none;
+}
+.dropdown-content a {
+    display: block;
+    width: 1.75rem;
+    line-height: .55rem;
+    text-align: center;
+    margin-left: 0;
+    background: #383e49;
+    border-radius: 0;
+}
+.dropdown-content a:last-child {
+    border-top: 0;
+}
+.caret {
+    position: relative;
+    top: -.02rem;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .04rem;
+    vertical-align: middle;
+    border-top: .08rem dashed;
+    border-top: .08rem solid;
+    border-right: .08rem solid transparent;
+    border-left: .08rem solid transparent;
+  }
+  .show {
+    display: block !important;
+  }
