微管家和推广区分登录
微管家和推广区分登录

--- a/production/css/index.css
+++ b/production/css/index.css
@@ -1390,3 +1390,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active{
 .show {
   display: block !important;
 }
+.is-wechatone {
+  display: none;
+}
