--- a/uat/css/index.css
+++ b/uat/css/index.css
@@ -1349,3 +1349,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active{
 .show {
   display: block !important;
 }
+.is-wechatone {
+  display: none;
+}
